Add simple main menu to android app

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -31,6 +31,7 @@
                 android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/device_filter" />
 		</activity>
+        <activity android:name="com.oneiroi.RemoteControlActivity" android:label="@string/activity_remote_control" />
     </application>
 
 </manifest>
